# dashboard

./: .gitignore  404.html  LICENSE  README.md  eslint.config.mjs  index.html  jupyter_nbconvert_config.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  staticman.yml
.github/workflows/: _common-lint.yml  ci-tests.yml  update-pages.yml
assets/data/: code_scanning_history.json  commit_activity.json  coverage_history.json  metadata.json  prs.json  repos.json  searchcorpus.json  star_history.json
assets/js/: dashboard.js
aur/: sunshine-bin.json  sunshine-git.json  sunshine.json
codecov/: .github-private.json  GSMS.json  GSMS_coverage_trend.json  GameDB.json  GameDB_coverage_trend.json  Koko.json  Koko_coverage_trend.json  LizardByte.github.io.json  Moonlight-XboxOG.json  Moonlight-XboxOG_coverage_trend.json  PlexyGlass.json  PlexyGlass_coverage_trend.json  Plugger.json  PluggerDB.json  Plugger_coverage_trend.json  PyStream.json  RetroArcher-plex.json  RetroArcher.X.json  RetroArcher.dats.json  RetroArcher.json  RetroArcher_coverage_trend.json  Sunshine.json  Sunshine_coverage_trend.json  Themerr-jellyfin.json  Themerr-jellyfin_coverage_trend.json  Themerr-kodi.json  Themerr-kodi_coverage_trend.json  Themerr-plex.json  Themerr-plex_coverage_trend.json  ThemerrDB.json  ThemerrDB_coverage_trend.json  Virtual-Display-Driver.json  Virtual-Gamepad-Emulation-Bus.json  Virtual-Gamepad-Emulation-Client.json  Virtual-Gamepad-Emulation-dotnet.json  actions.json  actions_coverage_trend.json  app-directory.json  awesome-sunshine.json  beautiful-jekyll-next.json  (+61 more)
crowdin/: LizardByte.json  LizardByte_Testing.json  LizardByte_docs.json
discord/: invite.json
facebook/: group.json  page.json
gh-pages-template/: _config.yml  index.html
github/: repos.json
github/codeScanning/: .github.json  GameDB.json  Koko.json  LizardByte.github.io.json  Moonlight-XboxOG.json  Sunshine.json  Themerr-jellyfin.json  Themerr-plex.json  ThemerrDB.json  Virtual-Display-Driver.json  Virtual-Gamepad-Emulation-Client.json  actions.json  app-directory.json  awesome-sunshine.json  beautiful-jekyll-next.json  build-deps.json  community.json  contribkit.json  contributors.json  copr-ci.json  dashboard.json  doxyconfig.json  gamepad-helper.json  homebrew-core.json  homebrew-homebrew.json  i18n.json  jellyfin-plugin-repo.json  libdisplaydevice.json  libvirtualdisplay.json  libvirtualhid.json  lizardbyte-common.json  packages.json  pacman-repo-builder.json  pacman-repo.json  roadmap.json  shared-web.json  support-bot-commands.json  support-bot.json  template-base.json  tray.json  (+2 more)
github/codeScanningHistory/: .github.json  GameDB.json  Koko.json  LizardByte.github.io.json  Moonlight-XboxOG.json  Sunshine.json  Themerr-jellyfin.json  Themerr-plex.json  ThemerrDB.json  actions.json  app-directory.json  beautiful-jekyll-next.json  build-deps.json  community.json  contribkit.json  copr-ci.json  dashboard.json  doxyconfig.json  homebrew-homebrew.json  jellyfin-plugin-repo.json  libdisplaydevice.json  libvirtualhid.json  tray.json  (+5 more)
notebook/: dashboard.ipynb
patreon/: LizardByte.json
readthedocs/: projects.json
src/: __init__.py  builder.py  dashboard.py  helpers.py  logger.py  update.py  updater.py
tags/: index.html
tests/: conftest.py  dashboard.test.js
(+306 files in other folders)
