[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dashboard"
dynamic = ["version"]
description = "Dashboard for LizardByte"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
    {name = "LizardByte", email = "lizardbyte@users.noreply.github.com"}
]

dependencies = [
    "cloudscraper==1.2.71",
    "ipython==9.11.0",
    "itables==2.7.1",
    "notebook==7.5.5",
    "pandas==3.0.1",
    "pillow==12.1.1",
    "plotly==6.6.0",
    "pygithub==2.8.1",
    "python-dotenv==1.2.2",
    "requests==2.32.5",
    "tqdm==4.67.3",
    "unhandled_exit==1.0.0",
]

[project.optional-dependencies]
dev = [
    "nb-clean==4.0.1",
    "nbqa[toolchain]==1.9.1",
]

[project.urls]
Homepage = "https://app.lizardbyte.dev/Sunshine"
Repository = "https://github.com/LizardByte/Sunshine"
Issues = "https://github.com/LizardByte/Sunshine/issues"
