[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dashboard"
dynamic = ["version"]
description = "Dashboard for LizardByte"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
    {name = "LizardByte", email = "lizardbyte@users.noreply.github.com"}
]

dependencies = [
    "cloudscraper==1.2.71",
    "pillow==12.1.1",
    "pygithub==2.8.1",
    "python-dotenv==1.2.2",
    "requests==2.32.5",
    "tqdm==4.67.3",
    "unhandled_exit==1.0.0",
]

[project.urls]
Homepage = "https://app.lizardbyte.dev/dashboard"
Repository = "https://github.com/LizardByte/dashboard"
Issues = "https://github.com/LizardByte/dashboard/issues"
