[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dashboard"
dynamic = ["version"]
description = "Dashboard for LizardByte"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
    {name = "LizardByte", email = "lizardbyte@users.noreply.github.com"}
]

dependencies = [
    "cloudscraper==1.2.71",
    "pillow==12.1.1",
    "pygithub==2.9.0",
    "python-dotenv==1.2.2",
    "requests==2.32.5",
    "tqdm==4.67.3",
    "unhandled_exit==1.0.0",
]

[project.optional-dependencies]
dev = [
    "flake8==7.3.0",
    "pytest==9.0.2",
    "pytest-cov==7.1.0",
    "requests-mock==1.12.1",
]

[project.urls]
Homepage = "https://app.lizardbyte.dev/dashboard"
Repository = "https://github.com/LizardByte/dashboard"
Issues = "https://github.com/LizardByte/dashboard/issues"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-rxXs",
    "--tb=native",
    "--verbose",
    "--color=yes",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-fail-under=100",
    "--junitxml=junit-python.xml",
    "-o", "junit_family=legacy",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
